2025-05-12  Zhengyi Fu  <i@fuzy.me>

	* templates/cc-mode.eld: Add new snippet `pheader'.

2025-05-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (confirm-kill-emacs): Do not require confirmation
	on exit.

2025-05-12  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/cmake-capf.el (cmake-capf--candidates): Use
	`with-temp-buffer' instead of `with-work-buffer'.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (auto-mode-alist): Fix entry for `c++-mode'.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (tool-map): Bind "R" to `tui-recentf' and "G" to
	`tui-git-ls-files'.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (udev-rules-mode): New command.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui--kill-callback): Fix the regexp.

2025-05-09  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/fuzzy-finder.el (fuzzy-finder-fzf): Fix syntax error.

2025-05-08  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui--grep-preview, tui--file-preview): New
	variables.

2025-05-08  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-recentf): Save recentf list.

	* init.el (auto-mode-alist): Treat .ipp and .tpp files as c++.
	(file-map): Bind "f" to `find-file'.
	(mode-specific-map): Bind "s" to `save-buffer'.
	Bind "r" to `deadgrep'.

	Improve tui and fuzzy-finder

	* site-lisp/tui/tui.el (tui-external-terminal-exec): Redirect
	output to a temp file.
	(tui-kill): Add header line.  Add preview.
	(tui-recentf): New command.
	* site-lisp/tui/fuzzy-finder.el (fuzzy-finder):
	(fuzzy-finder-build): New slot `layout'.
	(fuzzy-finder-fzf): Do not default to --preview-window noborder


2025-04-30  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Do not specify clangd query-drivers.  Clang
	builtin headers should be preferred.

2025-04-24  Zhengyi Fu  <i@fuzy.me>

	Minor fixes

	* init.el (completion-cycle-threshold): Set to nil.
	* init.el (cmake-mode-hook, cmake-ts-mode-hook): Add `cmake-capf-setup'.
	* init.el <eglot>: Add /usr/bin/cc and /usr/bin/c++ to clangd query-drivers.
