@@ -1,3 +1,14 @@
+2025-05-13  Zhengyi Fu  <i@fuzy.me>
+
+	Remove password-store
+
+	* obsoletes.el: New file for removed parts.
+
+	* packages.el (pass): Remove package.
+
+	* init.el (eat-send-pass): Remove function.
+	(password-store): Remove package configuration.
+
 2025-05-12  Zhengyi Fu  <i@fuzy.me>
 
 	* templates/cc-mode.eld: Add new snippet `pheader'.
